Bruno and Adele pages

--- a/artists/adele.html
+++ b/artists/adele.html
@@ -8,8 +8,10 @@
     <title>Adele</title>
   </head>
   <body>
-    <div class="artist-container">
-      ADELE
-    </div>
+    <main id="adele" class="info-container">
+      <a href="http://adele.com/" target="_blank">
+        ADELE
+      </a>
+    </main>
   </body>
 </html>
