--- a/artists/bruno.html
+++ b/artists/bruno.html
@@ -8,8 +8,10 @@
     <title>Bruno</title>
   </head>
   <body>
-    <div class="artist-container">
-      BRUNO MARS
-    </div>
+    <main id="bruno" class="info-container">
+      <a href="https://www.brunomars.com/" target="_blank">
+        BRUNO MARS
+      </a>
+    </main>
   </body>
 </html>
