Responsive image gallery

--- a/animation-review/responsive-kitiya-navbar/public/index.html
+++ b/animation-review/responsive-kitiya-navbar/public/index.html
@@ -28,47 +28,9 @@
         </div>
       </nav>
     </header>
-    <div>
-      <section id="beaver-project" class="project">
-        <div class="row">
-          <div class="col">
-            Here is my first projecct.
-          </div>
-          <div class="col">
-            <a href="https://github.com/kitiya/beaver" target="_blank">
-              <img src="static/images/beaver_tr.png" alt="beaver" />
-            </a>
-          </div>
-        </div>
-      </section>
-      <section id="web-dev-biz-project" class="project">
-        <div class="row">
-          <div class="col">
-            Here is my first projecct.
-          </div>
-          <div class="col">
-            <a href="https://kitiya-web-design.netlify.com" target="_blank">
-              <img
-                src="static/images/web-design-business-tr.png"
-                alt="web-dev"
-              />
-            </a>
-          </div>
-        </div>
-      </section>
-      <section id="artist-project" class="project">
-        <div class="row">
-          <div class="col">
-            Here is my first projecct.
-          </div>
-          <div class="col">
-            <a href="https://kitiya-artists.netlify.com" target="_blank">
-              <img src="static/images/artist.png" alt="artist" />
-            </a>
-          </div>
-        </div>
-      </section>
-    </div>
+    <main>
+      Content
+    </main>
 
     <script src="static/scripts/app.js"></script>
   </body>
