--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -4,35 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
-    <main class="gallery">
-      <img
-        src="https://cdn.pixabay.com/photo/2019/08/19/07/45/pets-4415649__340.jpg"
-        alt="image"
-      />
-      <img
-        src="https://cdn.pixabay.com/photo/2018/10/08/14/46/bird-3732867__340.jpg"
-        alt="image"
-      />
-      <img
-        src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg"
-        alt="image"
-      />
-      <img
-        src="https://cdn.pixabay.com/photo/2016/03/27/22/22/fox-1284512__340.jpg"
-        alt="image"
-      />
-      <img
-        src="https://cdn.pixabay.com/photo/2017/04/11/21/34/giraffe-2222908__340.jpg"
-        alt="image"
-      />
-      <img
-        src="https://cdn.pixabay.com/photo/2014/10/01/10/44/hedgehog-468228__340.jpg"
-        alt="image"
-      />
+    <main>
+      <div class="menu">
+        <a class="menu-item" href="./demo-1">DEMO 1</a>
+      </div>
+      <div class="menu">
+        <a class="menu-item" href="./demo-2">DEMO 2</a>
+      </div>
+      <div class="menu">
+        <a class="menu-item" href="./demo-3">DEMO 3</a>
+      </div>
     </main>
   </body>
 </html>
