Static web design: 100vh for <body>

--- a/web-design-business/index.html
+++ b/web-design-business/index.html
@@ -32,8 +32,8 @@
         <nav>
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -90,7 +90,7 @@
       </div>
     </section>
     <footer>
-      <p>Kitiya Web Design | Copyright &copy; 2019</p>
+      <p>Kitiya Web Design | Copyright &copy; 2020</p>
     </footer>
     <script src="./scripts/app.js"></script>
   </body>
